--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "react-calendar": "^3.0.1",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.13.1",
+    "react-google-login": "^5.1.14",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "sass": "^1.26.5"
   },
